[tool.poetry]
name = "reasoning-agent"
version = "0.1.0"
description = "project to test different reasoning llm models"
authors = ["Alex Barria <alex@tryolabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.76.0"
dotenv = "^0.9.9"
flask = "^3.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
